test.txt
    Finished `test` profile [unoptimized + debuginfo] target(s) in 0.03s
   Doc-tests proposed_traits

running 10 tests
test proposed-traits/src/ecdsa.rs - ecdsa::Curve (line 61) ... ignored
test proposed-traits/src/i3c_target.rs - i3c_target::DynamicAddressable (line 36) ... FAILED
test proposed-traits/src/i2c_target.rs - i2c_target::I2CCoreTarget::on_transaction_start (line 80) ... FAILED
test proposed-traits/src/i3c_master.rs - i3c_master::I3c::assign_dynamic_address (line 80) ... FAILED
test proposed-traits/src/i2c_target.rs - i2c_target::WriteReadTarget::on_write_read (line 155) ... FAILED
test proposed-traits/src/i2c_target.rs - i2c_target::I2CTarget (line 17) ... FAILED
test proposed-traits/src/digest.rs - digest::DynamicDigestOp (line 103) ... ok
test proposed-traits/src/digest.rs - digest::DynamicDigestOp (line 248) ... ok
test proposed-traits/src/digest.rs - digest::DynamicDigestOp (line 180) ... ok
test proposed-traits/src/digest.rs - digest::DynamicDigestOp (line 282) ... ok

failures:

---- proposed-traits/src/i3c_target.rs - i3c_target::DynamicAddressable (line 36) stdout ----
error: `self` parameter is only allowed in associated functions
 --> proposed-traits/src/i3c_target.rs:37:32
  |
3 | fn on_dynamic_address_assigned(&mut self, new_address: u8) {
  |                                ^^^^^^^^^ not semantically valid as function parameter
  |
  = note: associated functions are those in `impl` or `trait` definitions

error: aborting due to 1 previous error

Couldn't compile the test.
---- proposed-traits/src/i2c_target.rs - i2c_target::I2CCoreTarget::on_transaction_start (line 80) stdout ----
error: `self` parameter is only allowed in associated functions
 --> proposed-traits/src/i2c_target.rs:81:25
  |
3 | fn on_transaction_start(&mut self, repeated: bool) {
  |                         ^^^^^^^^^ not semantically valid as function parameter
  |
  = note: associated functions are those in `impl` or `trait` definitions

error: aborting due to 1 previous error

Couldn't compile the test.
---- proposed-traits/src/i3c_master.rs - i3c_master::I3c::assign_dynamic_address (line 80) stdout ----
error[E0433]: failed to resolve: use of undeclared type `SevenBitAddress`
 --> proposed-traits/src/i3c_master.rs:81:19
  |
3 | let static_addr = SevenBitAddress::new(0x52).unwrap();
  |                   ^^^^^^^^^^^^^^^ use of undeclared type `SevenBitAddress`
  |
help: consider importing this type alias
  |
2 + use embedded_hal::i2c::SevenBitAddress;
  |

error[E0425]: cannot find value `controller` in this scope
 --> proposed-traits/src/i3c_master.rs:82:7
  |
4 | match controller.assign_dynamic_address(static_addr) {
  |       ^^^^^^^^^^ not found in this scope

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.
Couldn't compile the test.
---- proposed-traits/src/i2c_target.rs - i2c_target::WriteReadTarget::on_write_read (line 155) stdout ----
error[E0425]: cannot find value `device` in this scope
 --> proposed-traits/src/i2c_target.rs:156:1
  |
3 | device.on_write_read(&mut [0x01, 0x02], &mut [0; 4])?;
  | ^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
Couldn't compile the test.
---- proposed-traits/src/i2c_target.rs - i2c_target::I2CTarget (line 17) stdout ----
error[E0405]: cannot find trait `I2CCoreTarget` in this scope
 --> proposed-traits/src/i2c_target.rs:20:6
  |
5 | impl I2CCoreTarget for MyDevice { /* ... */ }
  |      ^^^^^^^^^^^^^ not found in this scope
  |
help: consider importing this trait
  |
2 + use proposed_traits::i2c_target::I2CCoreTarget;
  |

error[E0405]: cannot find trait `ReadTarget` in this scope
 --> proposed-traits/src/i2c_target.rs:21:6
  |
6 | impl ReadTarget for MyDevice { /* ... */ }
  |      ^^^^^^^^^^ not found in this scope
  |
help: consider importing this trait
  |
2 + use proposed_traits::i2c_target::ReadTarget;
  |

error[E0405]: cannot find trait `WriteTarget` in this scope
 --> proposed-traits/src/i2c_target.rs:22:6
  |
7 | impl WriteTarget for MyDevice { /* ... */ }
  |      ^^^^^^^^^^^ not found in this scope
  |
help: consider importing this trait
  |
2 + use proposed_traits::i2c_target::WriteTarget;
  |

error[E0405]: cannot find trait `WriteReadTarget` in this scope
 --> proposed-traits/src/i2c_target.rs:23:6
  |
8 | impl WriteReadTarget for MyDevice { /* ... */ }
  |      ^^^^^^^^^^^^^^^ not found in this scope
  |
help: consider importing this trait
  |
2 + use proposed_traits::i2c_target::WriteReadTarget;
  |

error[E0405]: cannot find trait `RegisterAccess` in this scope
 --> proposed-traits/src/i2c_target.rs:24:6
  |
9 | impl RegisterAccess for MyDevice { /* ... */ }
  |      ^^^^^^^^^^^^^^ not found in this scope
  |
help: consider importing this trait
  |
2 + use proposed_traits::i2c_target::RegisterAccess;
  |

error[E0405]: cannot find trait `I2CTarget` in this scope
  --> proposed-traits/src/i2c_target.rs:27:18
   |
12 | fn use_device<T: I2CTarget>(dev: &mut T) {
   |                  ^^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
2  + use proposed_traits::i2c_target::I2CTarget;
   |

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0405`.
Couldn't compile the test.

failures:
    proposed-traits/src/i2c_target.rs - i2c_target::I2CCoreTarget::on_transaction_start (line 80)
    proposed-traits/src/i2c_target.rs - i2c_target::I2CTarget (line 17)
    proposed-traits/src/i2c_target.rs - i2c_target::WriteReadTarget::on_write_read (line 155)
    proposed-traits/src/i3c_master.rs - i3c_master::I3c::assign_dynamic_address (line 80)
    proposed-traits/src/i3c_target.rs - i3c_target::DynamicAddressable (line 36)

test result: FAILED. 4 passed; 5 failed; 1 ignored; 0 measured; 0 filtered out; finished in 0.48s

error: doctest failed, to rerun pass `-p proposed-traits --doc`
